Bug 39181 - [4.4 Regression] complex int arguments cause ICE
Summary: [4.4 Regression] complex int arguments cause ICE
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.4.0
: P4 normal
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
Depends on:
Blocks:
 
Reported: 2009-02-13 17:29 UTC by Andrew Pinski
Modified: 2009-03-12 14:01 UTC (History)
1 user (show)

See Also:
Host:
Target: spu-elf
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Pinski 2009-02-13 17:29:55 UTC
Small testcase:
_Complex int bar(_Complex int z)
{
  return z;
}

--- CUT ---
This causes some testsuite failures on spu-elf.
t.c: In function ‘bar’:
t.c:9: internal compiler error: in spu_expand_mov, at config/spu/spu.c:4117
Please submit a full bug report,
with preprocessed source if appropriate.
See <http://gcc.gnu.org/bugs.html> for instructions.
Comment 1 Andrew Pinski 2009-02-13 17:31:00 UTC
It started to ICE between revision 142828 and revision 144107 (a little over two months worth).
Comment 2 Ulrich Weigand 2009-03-12 14:00:51 UTC
Subject: Bug 39181

Author: uweigand
Date: Thu Mar 12 14:00:21 2009
New Revision: 144811

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=144811
Log:
	PR target/39181
	* config/spu/spu.c (spu_expand_mov): Handle invalid subregs
	of non-integer mode as well.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/config/spu/spu.c

Comment 3 Ulrich Weigand 2009-03-12 14:01:41 UTC
Fixed.