	PR target/39181 	* config/spu/spu.c (spu_expand_mov): Handle invalid subregs 	of non-integer mode as well.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144811 138bc75d-0d04-0410-961f-82ee72b054a4